# GarbageSortingTrolley

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
include/: control.h  data.h  defs.h  detect.h  log.h  realSenseDriver.h  serial.h  states.h  systime.h
resource/: param.xml
src/: control.cpp  data.cpp  detect.cpp  realSenseDriver.cpp  serial.cpp  states.cpp
