cmake_minimum_required(VERSION 3.0)

project(MASTER)
SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -g -std=c++14 -pthread -lv4l1 -lv4l2 -lrealsense2 -fopenmp")
SET(BIN_NAME "run")

FIND_PACKAGE(OpenCV 4.4.0 REQUIRED)
FIND_PACKAGE(Threads)
FIND_PACKAGE(realsense2 REQUIRED)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

INCLUDE_DIRECTORIES(/usr/include/eigen3)
INCLUDE_DIRECTORIES(${realsense2_INCLUDE_DIR})

MESSAGE(STATUS "Project:MASTER")
MESSAGE(STATUS "Project Directory: ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "OpenCV Version: ${OpenCV_VERSION}")
MESSAGE(STATUS "OpenCV Libraries: ${OpenCVLIBS}")
MESSAGE(STATUS "Include Path:${PROJECT_SOURCE_DIR}/include ${OpenCV_INCLUDE_DIRS}")

FILE(GLOB_RECURSE SOURCES "src/*.cpp")

ADD_EXECUTABLE(${BIN_NAME} test.cpp ${SOURCES})

TARGET_LINK_LIBRARIES(${BIN_NAME} ${realsense2_LIBRARY})
TARGET_LINK_LIBRARIES(${BIN_NAME} ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(${BIN_NAME} ${OpenCV_LIBS})

